add UI and styles to html and add js to receive an input

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
   <header></header>
   <div class="container">
     <h1>TITLE HERE</h1>
-    
+    <form id="go"></form>
+      <div class="form-group">
+        <label for="input">Enter a number </label>
+        <input id="input" class="form-control" type="number">
+      </div>
+      <button type="submit" class="btn btn-primary">See Your Answer</button>
+    </form>
+    <div>
+      <label for="result">Your Answer</label>
+      <output id="result" class="form-control"></output>
+    </div>
   </div>
   <footer></footer>
 </body>
