--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
   <header></header>
   <div class="container">
     <h1>TITLE HERE</h1>
-    <form id="go"></form>
+    <form id="go">
       <div class="form-group">
         <label for="input">Enter a number </label>
-        <input id="input" class="form-control" type="number">
+        <input id="input" class="form-control" type="text">
       </div>
       <button type="submit" class="btn btn-primary">See Your Answer</button>
     </form>
     <div>
       <label for="result">Your Answer</label>
-      <output id="result" class="form-control"></output>
+      <br>
+      <output id="result"></output>
     </div>
   </div>
   <footer></footer>
