--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>TITLE HERE</title>
+  <title>Mr. Roboger's Neighborhood</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
@@ -10,8 +10,9 @@
 <body>
   <header></header>
   <div class="container">
-    <h1>TITLE HERE</h1>
+    <h1 class="jumbotron">Mr. Roboger's Neighborhood</h1>
     <form id="go">
+      <h4>Want to see your number transform into a Mr. Roboger's Neighborhood?</h4>
       <div class="form-group">
         <label for="input">Enter a number </label>
         <input id="input" class="form-control" type="text">
