added some styling to the result

--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
       </div>
       <button type="submit" class="btn btn-primary">See Your Answer</button>
     </form>
+    <h5><label for="result">Your Answer</label></h5>
     <div>
-      <label for="result">Your Answer</label>
-      <br>
-      <output id="result"></output>
+      
+      
+      <output id="result" class="pink"></output>
     </div>
   </div>
   <footer></footer>
