updated css styling to the jumbotron and output

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <button type="submit" class="btn btn-primary">See Your Answer</button>
     </form>
-    <h5><label for="result">Your Answer</label></h5>
+    <h5><label for="result">Your Answer:</label></h5>
     <div>
       
       
