--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
   <header></header>
   <div class="container">
-    <h1 class="jumbotron">Mr. Roboger's Neighborhood</h1>
+    <div>
+      <h1 class="jumbotron">Mr. Roboger's Neighborhood</h1>
+  </div>
     <form id="go">
-      <h4>Want to see your number transform into a Mr. Roboger's Neighborhood?</h4>
+      <h4>Want to see your number transform into Mr. Roboger's Neighborhood?</h4>
       <div class="form-group">
         <label for="input">Enter a number </label>
         <input id="input" class="form-control" type="text">
